# simplesmtp-helpers

./: .gitmodules  CMakeLists.txt  README.md
tests/: CMakeLists.txt  basic.cc
